<resources>
    <string name="app_name">W6</string>
    <string name="description">Description </string>
    <string name="text_assign">Assigned by unassigned </string>
    <string name="action_users">User Screen</string>
    <string name="action_room">Room Screen</string>
    <string name="title">Title:</string>
    <string name="completed">Completed:</string>
    <string name="assigned">Assigned to:</string>
    <string name="hint_assigned">Unassigned</string>
    <string name="btnAdd">ADD</string>
    <string name="name">User\'s name</string>
    <string name="btnSave">SAVE</string>
    <string name="spinnerFirst">Assign Task</string>
    <string name="spinnerLast">Unassign</string>
    <string name="delete">Delete</string>
</resources>
