<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailTaskActivity">

    <TextView
            android:text="@string/title"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:id="@+id/tvTitleLabel"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="italic"
            android:id="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/tvCompletedLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
    <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="@+id/tvCompletedLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCompletedLabel"
            app:layout_constraintStart_toEndOf="@+id/tvAssignedLabel"
            android:layout_marginStart="20dp"/>

    <TextView
            android:text="@string/assigned"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tvAssignedLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompletedLabel"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAssigned"
            android:textStyle="italic"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/tvAssignedLabel"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="@+id/tvAssignedLabel"
            app:layout_constraintBottom_toBottomOf="@+id/tvAssignedLabel"
            android:text="@string/hint_assigned"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:prompt="@string/spinnerFirst"
            android:id="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAssignedLabel"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"/>
    <Button
            android:text="@string/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginTop="30dp"/>
</android.support.constraint.ConstraintLayout>